# cafe

./: .gitignore  .impeccable.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
CAFE/: cafe.py  cafe.yaml  cafe_hpc.py  conda.yaml  pixi.toml  readme.txt  web.py
CAFE/.streamlit/: config.toml
CAFE/docs/: STREAMLIT_UPGRADE.md
CAFE/src/cafe_app/: __init__.py  hpc.py  launcher.py  run.py  run_w.py  theme.py
CAFE/src/cafe_app/advanced/: Cluster_Annotation.py  Cluster_Evaluation.py  Downsampling.py  Merge_Clusters.py  Selective_Clustering.py
CAFE/src/cafe_app/app/: CAFE.py  landing_content.py
CAFE/src/cafe_app/tools/: Data_Processing.py  Visualization.py  _plot_export.py  celltype_gmm.py  embedding_explorer.py  session_store.py  utils.py
CAFE/src/cafe_app/web/: CAFE.py
CAFE/tests/: conftest.py  test_celltype_gmm.py  test_data_processing.py  test_differential_abundance.py  test_selective_clustering.py  test_session_store.py  test_sparse_handling.py  test_utils.py
cafe_local/: .impeccable.md
docs/: 404.html
docs/getting-started/cafe-interface/: index.html
docs/installation/download/: index.html
docs/installation/pixi_way/: index.html
docs/installation/run_cafe/: index.html
docs/others/tool_dependencies/: index.html
docs/pagefind/: pagefind-entry.json  pagefind.en_178c9c16d7.pf_meta
docs/pagefind/fragment/: en_194370f.pf_fragment  en_353aa6a.pf_fragment  en_b542b0d.pf_fragment  en_ba1e599.pf_fragment
src/content/docs/: index.mdx
src/content/docs/getting-started/: cafe-interface.mdx  introduction.mdx
src/content/docs/installation/: conda_way.mdx  download.mdx  pipx_way.mdx  pixi_way.mdx  run_cafe.mdx  system_requirements.mdx  uv_way.mdx
src/content/docs/others/: citation.mdx  data_processing_hpc.mdx  faq.mdx  known_issues.mdx  tool_dependencies.mdx
src/content/docs/workflow/: diagram.mdx  flow_diagram.mdx  preparation.mdx  scaled_csv_file_structure.mdx
src/styles/: custom.css
