[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cafe-app"
version = "3.0.0"
description = "CAFE — no-code Spectral Flow Cytometry visualization and analysis tool"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Hasanul Banna Siam" }]

# Kept in sync with CAFE/pixi.toml [pypi-dependencies] and CAFE/cafe.yaml.
# Upgraded 2026-07 to the scanpy 1.12 / numpy 2 / pandas 3 stack. Exact pins so
# every install path (pixi, conda, uv/pip) resolves to the identical tested set.
dependencies = [
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.18.0",
    "statsmodels==0.14.6",
    "pyarrow==25.0.0",
    "scanpy==1.12.2",
    "anndata==0.13.1",
    "cliffs-delta==1.0.0",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "plotly==6.9.0",
    "cmasher==1.9.2",
    "igraph==1.0.0",
    "streamlit==1.59.1",
    "watchdog==6.0.0",
    "kaleido==1.3.0",
    "packaging>=25",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://mhbsiam.github.io/cafe"
Repository = "https://github.com/mhbsiam/cafe"

[project.scripts]
cafe = "cafe_app.launcher:main"
cafe-web = "cafe_app.launcher:main_web"
cafe-hpc = "cafe_app.hpc:main"

[tool.setuptools.packages.find]
# The package lives under CAFE/src so it does not collide with the Astro docs
# site at the repo-root src/.
where = ["CAFE/src"]

[tool.setuptools.package-data]
cafe_app = ["img/*.png", "img/*.jpg"]
